--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "dogu-utils": "^0.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
