--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "dogu-utils": "^0.0.8",
+    "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
