--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "version": "0.0.0",
   "description": "A free, simple, lightweight online metronome with everything you need for practicing music. Accurate BPM and easy to use.",
   "homepage": "https://jeonjaewon.github.io/web-metronome",
-  "keywords": ["metronome", "online metronome", "web metronome", "music", "BPM", "practice", "free metronome"],
+  "keywords": [
+    "metronome",
+    "online metronome",
+    "web metronome",
+    "music",
+    "BPM",
+    "practice",
+    "free metronome"
+  ],
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,6 +23,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "dogu-utils": "^0.0.8",
     "immer": "^10.1.1",
     "react": "^18.3.1",
