--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@eslint/js": "^9.17.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@vanilla-extract/css": "^1.17.4",
+    "@vanilla-extract/vite-plugin": "^5.0.7",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.2.0",
