--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "dogu-utils": "^0.0.8",
     "immer": "^10.1.1",
+    "motion": "^12.20.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
