--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@mantine/core": "^8.1.2",
