--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@mantine/core": "^8.1.2",
@@ -28,6 +29,7 @@
     "clsx": "^2.1.1",
     "dogu-utils": "^0.0.8",
     "immer": "^10.1.1",
+    "motion": "^12.20.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
