Add packageManager field to specify pnpm@10.19.0

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "free metronome"
   ],
   "type": "module",
+  "packageManager": "pnpm@10.19.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
